--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         Learn more about Git in the
         <a href="https://git-scm.com/book/en/v2">official docs</a>
       </p>
+      <p>feature-1 added</p>
     </main>
   </body>
 </html>
